--- a/styles/header.css
+++ b/styles/header.css
@@ -2,76 +2,121 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  height: 60px;
+  height: 56px;
 }
 
 .left-section {
-  background-color: lightblue;
   width: 165px;
+  min-width: 165px;
   display: flex;
   flex-direction: row;
   align-items: center;
+  margin: 0;
+  padding: 0;
 }
 
 .hamburger-menu {
-  width: 21px;
-  height: 21px;
+  width: 23px;
+  height: 25px;
+  margin-left: 24px;
+  margin-right: 20px;
+  cursor: pointer;
 }
 
 .youtube-logo {
-  width: 95px;
+  width: 90px;
+  cursor: pointer;
 }
 
 .middle-section {
-  background-color: lightpink;
   flex: 1;
-  margin: 0 35px 0 70px;
-  max-width: 500px;
+  margin: 0 28px 0 54px;
+  max-width: 470px;
+  min-width: 20px;
   padding: 4px;
   display: flex;
   flex-direction: row;
   align-items: center;
 }
 
+.search-bar {
+  flex: 1;
+  height: 36px;
+  width: 0;
+  border: 1px solid rgb(192, 192, 192);
+  border-radius: 2px;
+  box-shadow: inset 1px 1px 2px rgba(109, 109, 109, 0.1);
+  font-size: 16px;
+  padding-left: 10px;
+}
+
+.search-button::placeholder {
+  font-family: Roboto, Arial;
+  font-size: 16px;
+}
+
+.search-button {
+  width: 60px;
+  height: 40px;
+  margin-right: 12px;
+  background-color: rgb(241, 241, 241);
+  border: 1px solid rgb(192, 192, 192);
+  margin-left: -1px;
+  cursor: pointer;
+}
+
 .search-icon {
   width: 25px;
   height: 25px;
+  margin-top: 4px;
+}
+
+.voice-search-button {
+  height: 40px;
+  width: 40px;
+  border: none;
+  border-radius: 20px;
+  background-color: rgb(241, 241, 241);
+  cursor: pointer;
 }
 
 .voice-search-icon {
-  width: 25px;
-  height: 25px;
-  padding: 5px;
-  border-radius: 18px;
-  background-color: rgb(235, 235, 235);
+  height: 24px;
+  margin-top: 4px;
 }
 
 .right-section {
-  background-color: lightblue;
-  width: 210px;
+  width: 182px;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
+  margin-right: 25px;
+  margin-left: 0;
+  flex-shrink: 0;
 }
 
 .upload-icon {
-  width: 25px;
-  height: 25px;
+  width: 24px;
+  height: 24px;
+  cursor: pointer;
 }
 
 .youtube-apps-icon {
-  width: 25px;
-  height: 25px;
+  width: 24px;
+  height: 24px;
+  cursor: pointer;
 }
 
 .notifications-icon {
-  width: 27px;
-  height: 27px;
+  width: 24px;
+  height: 26px;
+  cursor: pointer;
 }
 
 .my-channel-picture {
-  width: 33px;
-  height: 33px;
-  border-radius: 17px;
+  width: 32px;
+  height: 32px;
+  border-radius: 16px;
+  cursor: pointer;
 }
