--- a/styles/header.css
+++ b/styles/header.css
@@ -39,12 +39,20 @@
   align-items: center;
 }
 
+.search-bar-container {
+  display: flex;
+  width: 370px;
+  height: 36px;
+  flex: 1;
+  margin-right: 12px;
+}
+
 .search-bar {
   flex: 1;
-  height: 36px;
   width: 0;
   border: 1px solid rgb(192, 192, 192);
-  border-radius: 2px;
+  border-top-left-radius: 2px;
+  border-bottom-left-radius: 2px;
   box-shadow: inset 1px 1px 2px rgba(109, 109, 109, 0.1);
   font-size: 16px;
   padding-left: 10px;
@@ -57,10 +65,11 @@
 
 .search-button {
   width: 60px;
-  height: 40px;
-  margin-right: 12px;
-  background-color: rgb(241, 241, 241);
+  object-fit: contain;
+  object-position: center;
   border: 1px solid rgb(192, 192, 192);
+  border-top-right-radius: 2px;
+  border-bottom-right-radius: 2px;
   margin-left: -1px;
   cursor: pointer;
 }
