Practiced Fixed Position
Created side bar to youtube clone.
Used flex box to adjust the icon and text under
icon.
Adjusted body padding to be able to scroll and see
all of the content without hiding behind header/
sidebar.

--- a/styles/general.css
+++ b/styles/general.css
@@ -7,4 +7,7 @@ p {
 body {
   margin: 0;
   padding-bottom: 1000px;
+  padding-top: 80px;
+  padding-left: 95px;
+  background-color: rgb(251, 251, 251);
 }
