--- a/styles/sidebar.css
+++ b/styles/sidebar.css
@@ -1,9 +1,8 @@
 .sidebar {
   display: flex;
   flex-direction: column;
-  justify-content: space-evenly;
+  justify-content: start;
   align-items: center;
-  height: 450px;
   background-color: white;
   align-items: center;
   position: fixed;
@@ -11,19 +10,22 @@
   left: 0;
   top: 55px;
   bottom: 0;
+
+  margin: 0;
+  padding: 0;
 }
 
 .sidebar-container {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-top: 1px;
-  padding: 12px 0;
+  margin-top: 20px;
+  margin-bottom: 12px;
 }
 
 .sidebar-icon {
   width: 24px;
-  padding: 6px 0;
+  margin-bottom: 6px;
 }
 
 .sidebar-title {
