Learned about Position fixed, relative, and absolute. Added the time stamps and notification count onto Used relative and absolute position to add a hover style on the icon that shows the name of what the icon is or does.

--- a/styles/general.css
+++ b/styles/general.css
@@ -9,5 +9,6 @@ body {
   padding-bottom: 1000px;
   padding-top: 80px;
   padding-left: 95px;
+  padding-right: 24px;
   background-color: rgb(251, 251, 251);
 }
