--- a/styles/header.css
+++ b/styles/header.css
@@ -14,6 +14,8 @@
   border-bottom-width: 1px;
   border-bottom-style: solid;
   border-bottom-color: rgb(219, 219, 219);
+
+  z-index: 100;
 }
 
 .left-section {
@@ -46,7 +48,6 @@
   margin: 0 28px 0 54px;
   max-width: 470px;
   min-width: 20px;
-  padding: 4px;
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -55,7 +56,7 @@
 .search-bar-container {
   display: flex;
   width: 370px;
-  height: 36px;
+  height: 40px;
   flex: 1;
   margin-right: 12px;
 }
@@ -68,18 +69,17 @@
   border-bottom-left-radius: 2px;
   box-shadow: inset 1px 1px 2px rgba(109, 109, 109, 0.1);
   font-size: 16px;
-  padding-left: 10px;
+  font-family: Roboto, Arial;
+  padding-left: 12px;
 }
 
-.search-button::placeholder {
+.search-bar::placeholder {
   font-family: Roboto, Arial;
-  font-size: 16px;
+  font-size: 15px;
 }
 
 .search-button {
-  width: 60px;
-  object-fit: contain;
-  object-position: center;
+  width: 70px;
   border: 1px solid rgb(192, 192, 192);
   border-top-right-radius: 2px;
   border-bottom-right-radius: 2px;
@@ -90,7 +90,45 @@
 .search-icon {
   width: 25px;
   height: 25px;
-  margin-top: 4px;
+}
+
+.search-button,
+.voice-search-button {
+  display: flex;
+  justify-content: center;
+  position: relative;
+  align-items: center;
+}
+
+.search-button .tooltip,
+.voice-search-button .tooltip {
+  background-color: gray;
+  color: white;
+  border-radius: 2px;
+  margin-top: 18px;
+  font-size: 13px;
+  font-family: Roboto, Arial;
+  padding: 8px 6px;
+  position: absolute;
+  bottom: -48px;
+  opacity: 0;
+  transition: opacity 0.3s;
+  white-space: nowrap;
+  pointer-events: none;
+}
+
+.search-button:hover .tooltip,
+.voice-search-button:hover .tooltip {
+  background-color: gray;
+  color: white;
+  border-radius: 2px;
+  margin-top: 18px;
+  font-size: 13px;
+  font-family: Roboto, Arial;
+  padding: 8px 6px;
+  position: absolute;
+  bottom: -48px;
+  opacity: 1;
 }
 
 .voice-search-button {
@@ -104,7 +142,6 @@
 
 .voice-search-icon {
   height: 24px;
-  margin-top: 4px;
 }
 
 .right-section {
@@ -118,10 +155,59 @@
   flex-shrink: 0;
 }
 
+.upload-icon-container .tooltip,
+.youtube-apps-icon-container .tooltip,
+.notifications-icon-container .tooltip {
+  background-color: gray;
+  color: white;
+  border-radius: 2px;
+  margin-top: 18px;
+  font-size: 13px;
+  font-family: Roboto, Arial;
+  padding: 8px 6px;
+  position: absolute;
+  bottom: -48px;
+  opacity: 0;
+  transition: opacity 0.3s;
+  white-space: nowrap;
+  pointer-events: none;
+}
+
+.upload-icon-container:hover .tooltip,
+.youtube-apps-icon-container:hover .tooltip,
+.notifications-icon-container:hover .tooltip {
+  background-color: gray;
+  color: white;
+  border-radius: 2px;
+  margin-top: 18px;
+  font-size: 13px;
+  font-family: Roboto, Arial;
+  padding: 8px 6px;
+  position: absolute;
+  bottom: -48px;
+  opacity: 1;
+}
+
+.upload-icon-container {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
 .upload-icon {
   width: 24px;
   height: 24px;
   cursor: pointer;
+}
+
+.youtube-apps-icon-container {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .youtube-apps-icon {
@@ -130,13 +216,39 @@
   cursor: pointer;
 }
 
+.notifications-icon-container {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.notifications-icon-container {
+  position: relative;
+}
+
 .notifications-icon {
   width: 24px;
-  height: 26px;
+  height: 24px;
   cursor: pointer;
 }
 
-.my-channel-picture {
+.notifications-count {
+  position: absolute;
+  top: -6px;
+  right: -7px;
+  background-color: #cc0000;
+  color: white;
+  font-family: Roboto, Arial;
+  font-size: 10px;
+  border: 2px solid white;
+  padding: 2px 5px;
+  border-radius: 10px;
+  text-align: center;
+}
+
+.current-user-picture {
   width: 32px;
   height: 32px;
   border-radius: 16px;
