--- a/styles/sidebar.css
+++ b/styles/sidebar.css
@@ -1,33 +1,33 @@
 .sidebar {
-  display: flex;
-  flex-direction: column;
-  justify-content: start;
-  align-items: center;
   background-color: white;
-  align-items: center;
   position: fixed;
   width: 72px;
   left: 0;
   top: 55px;
   bottom: 0;
-
-  margin: 0;
-  padding: 0;
+  padding-top: 5px;
+  z-index: 100;
 }
 
-.sidebar-container {
+.sidebar-link {
+  height: 74px;
   display: flex;
   flex-direction: column;
+  justify-content: center;
   align-items: center;
-  margin-top: 20px;
-  margin-bottom: 12px;
+  cursor: pointer;
 }
 
-.sidebar-icon {
+.sidebar-link:hover {
+  background-color: rgb(242, 242, 242);
+}
+
+.sidebar-link img {
   width: 24px;
   margin-bottom: 6px;
 }
 
-.sidebar-title {
+.sidebar-link p {
+  font-family: Roboto, Arial;
   font-size: 10px;
 }
